--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <h3>20 USD</h3>
                         </div>
                         <div class="link-wrapper">
-                            <a href="#" class="add-cart-btn">Add To Cart</a>
+                            <a href="javascript:void(0);" onclick="alertFunction();" class="add-cart-btn">Add To Cart</a>
                         </div>
                     </div>
                     <div class="plants-box">
@@ -78,7 +78,7 @@
                             <h3>20 USD</h3>
                         </div>
                         <div class="link-wrapper">
-                            <a href="#" class="add-cart-btn">Add To Cart</a>
+                            <a href="javascript:void(0);" onclick="alertFunction();" class="add-cart-btn">Add To Cart</a>
                         </div>
                     </div>
                     <div class="plants-box">
@@ -90,7 +90,7 @@
                             <h3>20 USD</h3>
                         </div>
                         <div class="link-wrapper">
-                            <a href="#" class="add-cart-btn">Add To Cart</a>
+                            <a href="javascript:void(0);" onclick="alertFunction();" class="add-cart-btn">Add To Cart</a>
                         </div>
                     </div>
                     <div class="plants-box">
@@ -102,7 +102,7 @@
                             <h3>20 USD</h3>
                         </div>
                         <div class="link-wrapper">
-                            <a href="#" class="add-cart-btn">Add To Cart</a>
+                            <a href="javascript:void(0);" onclick="alertFunction();" class="add-cart-btn">Add To Cart</a>
                         </div>
                     </div>
                     <div class="plants-box">
@@ -114,7 +114,7 @@
                             <h3>20 USD</h3>
                         </div>
                         <div class="link-wrapper">
-                            <a href="#" class="add-cart-btn">Add To Cart</a>
+                            <a href="javascript:void(0);" onclick="alertFunction();" class="add-cart-btn">Add To Cart</a>
                         </div>
                     </div>
                     <div class="plants-box">
@@ -126,7 +126,7 @@
                             <h3>20 USD</h3>
                         </div>
                         <div class="link-wrapper">
-                            <a href="#" class="add-cart-btn">Add To Cart</a>
+                            <a href="javascript:void(0);" onclick="alertFunction();" class="add-cart-btn">Add To Cart</a>
                         </div>
                     </div>
                     <div class="plants-box">
@@ -138,7 +138,7 @@
                             <h3>20 USD</h3>
                         </div>
                         <div class="link-wrapper">
-                            <a href="#" class="add-cart-btn">Add To Cart</a>
+                            <a href="javascript:void(0);" onclick="alertFunction();" class="add-cart-btn">Add To Cart</a>
                         </div>
                     </div>
                     <div class="plants-box">
@@ -150,7 +150,7 @@
                             <h3>20 USD</h3>
                         </div>
                         <div class="link-wrapper">
-                            <a href="#" class="add-cart-btn">Add To Cart</a>
+                            <a href="javascript:void(0);" onclick="alertFunction();" class="add-cart-btn">Add To Cart</a>
                         </div>
                     </div>
                 </div>
@@ -279,6 +279,15 @@
             </div>
         </div>
     </footer>
+
+
+
+
+    <script>
+        function alertFunction(){
+            alert("Flower Added to Cart");
+        }
+    </script>
 
 </body>
 
